# FundPilot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  base.py  openai_compat.py  prompts.py
backend/app/api/: deps.py
backend/app/core/: auth.py  config.py  constants.py  database.py  errors.py  response.py  task_lock.py
backend/app/integrations/: base.py  http_client.py
backend/app/models/: __init__.py  analysis.py  base.py  fund.py  news.py  sector.py  sentiment.py  system.py  watchlist.py
backend/app/repositories/: analysis_repo.py  base.py  fund_repo.py  news_repo.py  sector_repo.py  sentiment_repo.py  system_repo.py  watchlist_repo.py
backend/app/schemas/: ai.py  analysis.py  chat.py  fund.py  news.py  recommend.py  sector.py  system.py  watchlist.py
backend/app/services/: __init__.py  analysis_service.py  chat_service.py  collector_service.py  fund_service.py  recommendation_service.py  sector_service.py  sentiment_service.py
backend/app/tasks/: analysis_tasks.py  collect_tasks.py  scheduler.py
backend/app/utils/: encryption.py
backend/docs/: ARCH.md  PROGRESS.md  devlog-2026-05-23.md  phase2-plan.md
backend/scripts/: encrypt_api_keys.py
backend/tests/: conftest.py
backend/tests/test_ai/: test_openai_compat.py  test_prompts.py
backend/tests/test_api/: conftest.py  test_ai_providers.py  test_analysis.py  test_collect.py  test_funds.py  test_sectors.py
backend/tests/test_core/: test_config.py  test_constants.py  test_errors.py  test_response.py
backend/tests/test_integrations/: test_base.py  (+3 more)
cli/: .env.example  pyproject.toml
cli/fundpilot/: client.py  main.py  output.py
cli/tests/: test_client.py  test_commands.py  test_output.py
(+83 files in other folders)
