[project]
name = "fundpilot"
version = "0.1.0"
description = "Fund prediction and recommendation system for Chinese funds"
requires-python = "==3.12.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "pydantic-settings>=2.6.0",
    "akshare>=1.16.0",
    "aiohttp>=3.10.0",
    "apscheduler>=3.10.4",
    "httpx>=0.28.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[[tool.pip.index-urls]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
